fix Scrollbars dropdownLayout (#2952)
<DropdownLayout/> - Fixed two scrollbars in dropdownLayout

--- a/src/DropdownLayout/DropdownLayout.scss
+++ b/src/DropdownLayout/DropdownLayout.scss
@@ -34,7 +34,8 @@ $arrowDownShadow: -3px -3px 8px rgba(0, 0, 0, .1);
   height: 0;
   padding: 0;
   transition: opacity 0.2s ease;
-  display: none;
+  display: flex;
+  flex-direction: column;
   width: 100%;
   z-index: 6;
   left: 0;
